using Grpc.Core;
using System.Threading.Tasks;
using MiniServer.Core;
using MiniServer.Events;


namespace MiniServer.Services
{
    public interface IChatLogicService
    {
        Task<RegisterResponse> RegisterAsync(RegisterRequest request);
        // Add other methods as needed
    }

    public class ChatLogicService : IChatLogicService
    {
        public async Task<RegisterResponse> RegisterAsync(RegisterRequest request)
        {
            // Implement the actual registration logic here
            // This can involve interacting with the database, generating tokens, etc.

            // For demonstration, returning a dummy response
            var response = new RegisterResponse
            {
                IsSucceed = true,
                Token = "veryfresh_token",
                RefreshToken = "dummy_refresh_token"
            };

            return await Task.FromResult(response);
        }

        // Implement other methods as needed
    
    }
}